new features: - http proxy support - 4any instance support

--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -71,3 +71,8 @@
   service:
     name: prometheus
     state: restarted
+
+- name: service_restart_xinetd
+  service:
+    name: prometheus
+    state: restarted
