many linter fixes

--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -76,3 +76,11 @@
   service:
     name: prometheus
     state: restarted
+
+- name: insert SQL procedures on rgmweb DB
+  shell: mysql rgmweb < /var/lib/rgm/rgmweb/sql/one-liners.sql
+  args:
+    executable: /bin/bash
+  register: oneliner_sql_exec
+  changed_when: oneliner_sql_exec.rc == 1
+  failed_when: oneliner_sql_exec.rc == 2
