--- a/meta/main.yml
+++ b/meta/main.yml
@@ -40,7 +40,7 @@ galaxy_info:
     versions:
     - 7
 
-  galaxy_tags: ['RGM', 'monitoring']
+  galaxy_tags: ['rgm', 'monitoring']
     # List tags for your role here, one per line. A tag is a keyword that describes
     # and categorizes the role. Users find roles by searching for tags. Be sure to
     # remove the '[]' above, if you add tags to this list.
