add perl packages for plugins

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -74,6 +74,9 @@ packages_system:
 - dos2unix
 - mlocate
 - firewalld
+- perl-version
+- perl-Monitoring-Plugin
+- perl-IO-Socket-INET6
 
 packages_mariadb:
 - mariadb-server
