add linux-metricbeat one-liner add ansible task-file for registering linux-metricbeat add ansible task-file for registering windows-metricbeat

--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -77,6 +77,11 @@
     name: prometheus
     state: restarted
 
+- name: win_service_restart_metricbeat
+  win_service:
+    name: metricbeat
+    state: restarted
+
 - name: insert SQL procedures on rgmweb DB
   shell: mysql rgmweb < /var/lib/rgm/rgmweb/sql/one-liners.sql
   args:
