--- a/vars/main.yml
+++ b/vars/main.yml
@@ -95,13 +95,16 @@ oneliner_items:
   shell: "bash"
   markdown_instruction: linux_metricbeat_instructions.md
   markdown_help: ''
-  command: bash <(curl -k "https://{{ ansible_default_ipv4.address }}/distrib/install/Install-MetricBeat.sh)"
+  command: bash <(curl -k "https://{{ ansible_default_ipv4.address }}/distrib/install/install-metricbeat.sh)"
   tags:
   - 1
-  - 5
+  - 3
+  payload_files:
+  - install-metricbeat.sh
   config_files:
   - linux_metricbeat.yml
   upstream_files:
   - https://community.repo.rgm-cloud.io/rgm/latest/updates/x86_64/Packages/metricbeat-oss-7.2.1-x86_64.rpm
-  re_pattern: '^.*\/(?P<prefix>\w+-oss-).*(?P<suffix>-x86.+)$'
+  - https://artifacts.elastic.co/downloads/beats/metricbeat/metricbeat-oss-7.2.1-amd64.deb
+  re_pattern: '^.*\/(?P<prefix>\w+-oss-).*(?P<suffix>-(x86_|amd)64.+)$'
   re_replace: '\g<prefix>latest\g<suffix>'
