--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -47,6 +47,9 @@ grafana_rgm_dashboards: "{{ rgm_root_path }}/grafana/dashboards"
 grafana_install_plugins_core: True
 grafana_install_plugins_contrib: False
 
+# xinetd livestatus binding port
+xinetd_livestatus_port: 14176
+
 # Windows Beats installation base patch
 winbeats_base_path: 'C:\Program Files'
 
