--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -153,11 +153,12 @@
   getent:
     database: passwd
     key: "{{ rgma_user }}"
+    fail_key: no
 
 - name: create random password for rgma user
   set_fact:
     rgma_user_password: "{{ lookup('password', '/dev/null length=16 chars=ascii_letters,digits,-,_,!,.,*') }}"
-  when: not getent_passwd
+  when: not getent_passwd | json_query(rgma_user)
 
 - name: create RGM users
   user:
