--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -175,8 +175,7 @@
     ssh_key_bits: 2048
     ssh_key_file: .ssh/id_rsa
     update_password: on_create
-    #password: "{{ item.pwd | password_hash('sha512', lookup('password', '/dev/null length=16 chars=ascii_letters,digits,-,_,!,.,*')) }}"
-    password: "{{ password_hash('sha512', item.pwd) }}"
+    password: "{{ item.pwd | password_hash('sha512') }}"
   with_items:
   - { user: "{{ rgm_user }}",  pwd: "{{ rgm_user_password }}",  home: '/home/rgm', comment: 'RGM user',  group: "{{ rgm_group }}", groups: 'wheel' }
   - { user: "{{ rgma_user }}", pwd: "{{ rgma_user_password }}", home: "{{ rgm_root_path }}/rgma", comment: 'RGMA user', group: "{{ rgm_group }}", groups: '' }
