--- a/tasks/mariadb_post.yml
+++ b/tasks/mariadb_post.yml
@@ -8,6 +8,7 @@
     mysql --batch --skip-column-names lilac --execute="select value from lilac_configuration;"
   register: lilac_schema
   changed_when: lilac_schema.stdout != "61"
+  ignore_errors: yes
 
 - name: inject default Lilac schema on database
   shell: mysql lilac < /var/lib/rgm/lilac/lilac-rgm.sql
@@ -16,7 +17,7 @@
   register: lilac_schema_inject
   changed_when: lilac_schema_inject.rc == 1
   failed_when: lilac_schema_inject.rc == 2
-  when: lilac_schema.changed
+  when: lilac_schema.changed or lilac_schema.failed
 
 - name: check if lilac procedures are installed
   command: >
