--- a/tasks/mariadb_prep.yml
+++ b/tasks/mariadb_prep.yml
@@ -73,16 +73,16 @@
 - name: Initialize databases
   include_tasks:
     file: mariadb_db.yml
-    vars:
-      db_name
-      db_user
-      db_pwd
-    with_items:
-    - { name: "{{ db_grafana }}", user: "{{ mariadb_user }}", pwd: "{{ mariadb_pwd }}" }
-    - { name: "{{ db_nagvis }}",  user: "{{ mariadb_user }}", pwd: "{{ mariadb_pwd }}" }
-    - { name: "{{ db_lilac }}",   user: "{{ mariadb_user }}", pwd: "{{ mariadb_pwd }}" }
     apply:
       tags: mariadb
+      vars:
+        db_name: "{{ item.name }}"
+        db_user: "{{ item.user }}"
+        db_pwd: "{{ item.pwd }}"
+  with_items:
+  - { name: "{{ db_grafana }}", user: "{{ mariadb_user }}", pwd: "{{ mariadb_pwd }}" }
+  - { name: "{{ db_nagvis }}",  user: "{{ mariadb_user }}", pwd: "{{ mariadb_pwd }}" }
+  - { name: "{{ db_lilac }}",   user: "{{ mariadb_user }}", pwd: "{{ mariadb_pwd }}" }
 
 - name: create mariadb internal RO account
   mysql_user:
