- prometheus install disabled by default (installs with 'enable_prometheus' var - prometheus code refactoring  beats distribution upgraded to 7.3.1 - lilac RGM hostname update only is hostname doesn't match

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -52,6 +52,8 @@ grafana_install_plugins_contrib: False
 # xinetd livestatus binding port
 xinetd_livestatus_port: 14176
 
+enable_prometheus: no
+
 # Windows Beats installation base patch
 winbeats_base_path: 'C:\Program Files'
 
