--- a/tasks/mariadb_post.yml
+++ b/tasks/mariadb_post.yml
@@ -5,13 +5,13 @@
 
 - name: check if lilac schema is filled
   command: >
-    mysql --batch --skip-column-names lilac --execute="select value from lilac_configuration;"
+    "mysql --batch --skip-column-names {{ db_lilac }} --execute='select value from lilac_configuration;'"
   register: lilac_schema
   changed_when: lilac_schema.stdout != "61"
   ignore_errors: yes
 
 - name: inject default Lilac schema on database
-  shell: mysql lilac < /var/lib/rgm/lilac/lilac-rgm.sql
+  shell: "mysql {{ db_lilac }} < /var/lib/rgm/lilac/lilac-rgm.sql"
   args:
     executable: /bin/bash
   register: lilac_schema_inject
@@ -21,12 +21,12 @@
 
 - name: check if lilac procedures are installed
   command: >
-    mysql --batch --skip-column-names mysql --execute="SELECT count(routine_name) FROM information_schema.routines WHERE routine_type = 'PROCEDURE' AND routine_schema = 'lilac';"
+    "mysql --batch --skip-column-names mysql --execute=\"SELECT count(routine_name) FROM information_schema.routines WHERE routine_type = 'PROCEDURE' AND routine_schema = '{{ db_lilac }}';\""
   register: lilac_procedures
   changed_when: lilac_procedures.stdout != "6"
 
 - name: inject default Lilac procedures on database
-  shell: mysql lilac < /var/lib/rgm/lilac/lilac-procedures.sql
+  shell: "mysql {{ db_lilac }} < /var/lib/rgm/lilac/lilac-procedures.sql"
   args:
     executable: /bin/bash
   register: lilac_procedures_inject
