--- a/tasks/mariadb_post.yml
+++ b/tasks/mariadb_post.yml
@@ -21,7 +21,7 @@
 
 - name: check if lilac procedures are installed
   command: >
-    mysql --batch --skip-column-names mysql --execute="SELECT count(routine_name) FROM information_schema.routines WHERE routine_type = 'PROCEDURE' AND routine_schema = '{{ db_lilac }}';
+    mysql --batch --skip-column-names mysql --execute="SELECT count(routine_name) FROM information_schema.routines WHERE routine_type = 'PROCEDURE' AND routine_schema = '{{ db_lilac }}'";
   register: lilac_procedures
   changed_when: lilac_procedures.stdout != "6"
 
