--- a/meta/main.yml
+++ b/meta/main.yml
@@ -48,6 +48,14 @@ galaxy_info:
     # NOTE: A tag is limited to a single word comprised of alphanumeric characters.
     #       Maximum 20 tags per role.
 
-dependencies: []
+dependencies:
+- name: ansible-role-lvm-mount
+  src: git+https://git.rgm-cloud.io/ansible-role-lvm-mount.git
+  version: '20190916'
+- name: ansible-role-snmp
+  src: git+https://git.rgm-cloud.io/ansible-role-snmp.git
+  version: '20190911'
+
+#dependencies: []
   # List your role dependencies here, one per line. Be sure to remove the '[]' above,
   # if you add dependencies to this list.
