Change .sh to .bash due to Apache limitation

--- a/vars/main.yml
+++ b/vars/main.yml
@@ -95,12 +95,12 @@ oneliner_items:
   shell: "bash"
   markdown_instruction: linux_metricbeat_instructions.md
   markdown_help: ''
-  command: bash <(curl -k "https://{{ ansible_default_ipv4.address }}/distrib/install/install-metricbeat.sh)"
+  command: bash <(curl -k "https://{{ ansible_default_ipv4.address }}/distrib/install/install-metricbeat.bash)"
   tags:
   - 1
   - 3
   payload_files:
-  - install-metricbeat.sh
+  - install-metricbeat.bash
   config_files:
   - linux_metricbeat.yml
   upstream_files:
