--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -37,7 +37,7 @@
     path: /etc/yum.repos.d/epel.repo
     section: "{{ item }}"
     option: exclude
-    value: 'nagios*'
+    value: 'nagios* elasticsearch* metricbeat* kibana* grafana* influxdb*'
   with_items:
   - epel
   - epel-debuginfo
@@ -432,3 +432,4 @@
       tags: 4any
   when: rgm_central_host is defined
   tags: 4any
+  
