--- a/tasks/elastic.yml
+++ b/tasks/elastic.yml
@@ -124,6 +124,11 @@
 
   - name: setup metricbeat indexes and dashboards
     command: metricbeat setup -c /etc/metricbeat/metricbeat.yml -path.home /usr/share/metricbeat -path.config /etc/metricbeat -path.data /var/lib/metricbeat -path.logs /var/log/metricbeat
+    retries: 6
+    delay: 15
+    register: metricbeat_setup
+    until: metricbeat_setup.rc == 0
+    
   when: metricbeat_config.changed
 
 # curl -XPUT -H "Content-Type: application/json" http://localhost:9200/_all/_settings -d '{"index.blocks.read_only_allow_delete": null}'
