--- a/tasks/elastic.yml
+++ b/tasks/elastic.yml
@@ -123,7 +123,7 @@
     path: /etc/metricbeat/modules.d/kibana.yml
     regexp: '^(\s*)(#\s*)?basepath: .*$'
     backrefs: yes
-    line: "\\1basepath: \"\/bibana\""
+    line: "\\1basepath: \"/kibana\""
   notify: service_restart_metricbeat
 
 - block:
