fix missing dependency in cloud env

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -87,6 +87,7 @@ packages_system:
 - perl-Monitoring-Plugin
 - perl-IO-Socket-INET6
 - ruby
+- python2-jmespath
 
 packages_mariadb:
 - mariadb-server
